# criptobot

./: .env  Dockerfile  bot.py  calcules.py  pyproject.toml  test_bot.py
